# Human-Database

./: Application.cpp  Application.h  CMakeLists.txt  Display.cpp  Display.h  IdGenerator.cpp  IdGenerator.h  InputManager.cpp  InputManager.h  Main.cpp  Person.cpp  Person.h  PersonReader.cpp  PersonSaver.cpp  PersonSaver.h  Persons.txt  README.md
src/: Application.cpp  Application.h  CMakeLists.txt
src/managers/: CMakeLists.txt  Display.h  InputManager.h
src/person/: CMakeLists.txt  Person.h  PersonReader.cpp  PersonReader.h
src/utils/: CMakeLists.txt  IdGenerator.cpp  MenuSwitcher.h
